Ellipsize information on banner cards #66 Also fix display of place search results on mobile

--- a/src/components/banner-list/banner-list.less
+++ b/src/components/banner-list/banner-list.less
@@ -7,6 +7,10 @@
   column-gap: 20px;
   row-gap: 20px;
 
+  .banner-list-entry {
+    max-width: 90vw;;
+  }
+
   .banner-card-link {
     height: 100%;
     width: 100%;
