--- a/src/components/place-list-flat/place-list-flat.less
+++ b/src/components/place-list-flat/place-list-flat.less
@@ -8,6 +8,6 @@
   row-gap: 20px;
 
  .places-list-flat-entry {
-    width: 25rem;
+    max-width: 90vw;
   } 
 }
